--- a/views/home.html
+++ b/views/home.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <header>
-            <h1>Mercado Liebre</h1>
+
             <img src="/img/logo-mercado-liebre.svg" alt="Cargando..." width="300">
             <div> Lugar para poner la barra de búsqueda</div>
             <div> Comprá en cuotas y sin tarjeta de crédito</div>
@@ -54,10 +54,84 @@
             </nav>
         </header>
         <main>
-            
+            <h2>Productos</h2>
+            <h3>Basado en tu última visita</h3>
+            <section>
+                <div>
+                    <article>
+                        <img src="/img/img-cafetera-moulinex.jpg" alt="Cargando...">
+                        <p>$6.770</p>
+                        <p>40% OFF</p>
+                        <p>Cafetera Moulinex</p>
+                    </article>
+                    <article>
+                        <img src="/img/img-macbook-pro-2019.jpg" alt="Cargando...">
+                        <p>$230.000</p>
+                        <p>20% off</p>
+                        <p>MacBook Pro 2019</p>
+                    </article>
+                    <article>
+                        <img src="/img/img-samsung-galaxy-s10.jpg" alt="Cargando...">
+                        <p>$70.500</p>
+                        <p>10% off</p>
+                        <p>Samsung Galaxy S10</p>
+                    </article>
+                    <article>
+                        <img src="/img/img-tv-samsung-smart.jpg" alt="Cargando...">
+                        <p>$23.200</p>
+                        <p>5% off</p>
+                        <p>SmartTv Samsung 43"</p>
+                    </article>
+                </div>
+            </section>
+            <h3>Ofertas</h3>
+            <section>
+                <div>
+                    <article>
+                        <img src="/img/img-cafetera-moulinex.jpg" alt="Cargando...">
+                        <p>$6.770</p>
+                        <p>40% OFF</p>
+                        <p>Cafetera Moulinex</p>
+                    </article>
+                    <article>
+                        <img src="/img/img-macbook-pro-2019.jpg" alt="Cargando...">
+                        <p>$230.000</p>
+                        <p>20% off</p>
+                        <p>MacBook Pro 2019</p>
+                    </article>
+                    <article>
+                        <img src="/img/img-samsung-galaxy-s10.jpg" alt="Cargando...">
+                        <p>$70.500</p>
+                        <p>10% off</p>
+                        <p>Samsung Galaxy S10</p>
+                    </article>
+                    <article>
+                        <img src="/img/img-tv-samsung-smart.jpg" alt="Cargando...">
+                        <p>$23.200</p>
+                        <p>5% off</p>
+                        <p>SmartTv Samsung 43"</p>
+                    </article>
+                </div>
+            </section>
         </main>
         <footer>
-        
+        <div>
+            <section>
+                <h5>Pagá con tarjeta o en efectivo</h5>
+                <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en puntos de pago. ¡Y siempre es seguro!</p>
+            </section>
+            <section>
+                <h5>Envío gratis desde $ 2.500</h5>
+                <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de productos. Es un beneficio de Mercado Puntos.</p>
+            </section>
+            <section>
+                <h5>Seguridad, de principio a fin</h5>
+                <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer, porque estás siempre protegid@.</p>
+            </section>
+            <section>
+                <p>Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
+            </section>
+        </div>
         </footer>
     </body>
 </html>
