--- a/views/sell.html
+++ b/views/sell.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vender</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <header>
@@ -11,7 +12,7 @@
         <nav>
             <ul>
                 <li>
-                    <a href="/">Home</a>
+                    <a href="/">Home<i class="fa-solid fa-house fa-bounce"></i></i></a>
                 </li>
             </ul>
         </nav>
