--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,8 @@
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
 body{
     background-color: #EAC926;
     font-family: 'Roboto', sans-serif;
@@ -7,24 +12,55 @@ header{
     background-size: cover;
     text-align: left;
 }
+header a{
+    text-decoration: none;
+    color: rgb(18, 11, 76);;
+}
 #buscador{
-    display: block;
     background-color: white;
     color:  #666;
+    width: 150px;
 }
 #compras{
     margin: 20px;
 }
 .burger-menu{
+    width: 150px;
+    margin: 12px;
     background-color:  #03264C;
     display: flex;
     color:  #ebebeb;
-    align-items: center;
     justify-content: center;
-    background-size: contain;
 }
-section{
+main{
+    width: 100%;
+    background-color: rgb(190, 188, 188);
+    text-align: center;
+    margin: auto;
+}
+main section{
+    width: 90%;
     font-size: 12px; 
+}
+main article{
+    margin: 10px;
+    border: 1px solid rgb(63, 63, 63);
+    border-radius: 8px;
+}
+article img{
+    width: 100%;
+}
+article i{
+    color: #39b54a;
+    font-size: 2em; 
+    margin: 10px 0px;
+}
+.caja{
+    width: 100%;
+    background-color: white;
+    border-top: 1px solid #ebebeb;
+    border-left: 15px;
+    border-right: 15px;
 }
 .titulo{
     font-size: 24px;
@@ -37,6 +73,7 @@ footer{
     justify-content: center;
     text-align: center;
     background-color: white;
+    margin: auto;
 }
 footer i{
     font-size: 2em; 
@@ -45,4 +82,36 @@ footer i{
 }
 #fin{
     text-align: left
+}
+@media (min-width: 0px){
+    body{
+        max-width: 360px;
+    }
+    header nav{
+       display: none;
+    }  
+}
+@media (min-width: 361px){
+    body{
+        max-width: 768px;
+    }
+    header nav{
+        display: contents;
+     }  
+    .burger-menu{
+        display: none;
+    }  
+    article{
+        box-shadow: 0px 0px 10px rgb(100, 100, 100);
+    }
+        
+}
+@media (min-width: 769px){
+    .burger-menu{
+        display: none;
+    }  
+    article{
+        box-shadow: 0px 0px 10px rgb(100, 100, 100);
+    }
+    
 }
