--- a/views/home.html
+++ b/views/home.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="/css/styles.css">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Mercado Liebre</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -66,27 +66,31 @@
                 <div>
                     <article>
                         <img src="/img/img-cafetera-moulinex.jpg" alt="Cargando...">
+                        <div class="caja"><i class="fa-sharp fa-solid fa-truck-arrow-right fa-flip"></i>
                         <p class="precio">$6.770</p>
                         <p>40% OFF</p>
-                        <p>Cafetera Moulinex</p>
+                        <p>Cafetera Moulinex</p></div>
                     </article>
                     <article>
                         <img src="/img/img-macbook-pro-2019.jpg" alt="Cargando...">
+                        <div class="caja"><i class="fa-sharp fa-solid fa-truck-arrow-right fa-flip"></i>
                         <p class="precio">$230.000</p>
                         <p>20% off</p>
-                        <p>MacBook Pro 2019</p>
+                        <p>MacBook Pro 2019</p></div>
                     </article>
                     <article>
                         <img src="/img/img-samsung-galaxy-s10.jpg" alt="Cargando...">
+                        <div class="caja"><i class="fa-sharp fa-solid fa-truck-arrow-right fa-flip"></i>
                         <p class="precio">$70.500</p>
                         <p>10% off</p>
-                        <p>Samsung Galaxy S10</p>
+                        <p>Samsung Galaxy S10</p></div>
                     </article>
                     <article>
                         <img src="/img/img-tv-samsung-smart.jpg" alt="Cargando...">
+                        <div class="caja"><i class="fa-sharp fa-solid fa-truck-arrow-right fa-flip"></i>
                         <p class="precio">$23.200</p>
                         <p>5% off</p>
-                        <p>SmartTv Samsung 43"</p>
+                        <p>SmartTv Samsung 43"</p></div>
                     </article>
                 </div>
             </section>
@@ -95,27 +99,31 @@
                 <div>
                     <article>
                         <img src="/img/img-cafetera-moulinex.jpg" alt="Cargando...">
+                        <div class="caja"><i class="fa-sharp fa-solid fa-truck-arrow-right fa-flip"></i>
                         <p class="precio">$6.770</p>
                         <p>40% OFF</p>
-                        <p>Cafetera Moulinex</p>
+                        <p>Cafetera Moulinex</p></div>
                     </article>
                     <article>
                         <img src="/img/img-macbook-pro-2019.jpg" alt="Cargando...">
+                        <div class="caja"><i class="fa-sharp fa-solid fa-truck-arrow-right fa-flip"></i>
                         <p class="precio">$230.000</p>
                         <p>20% off</p>
-                        <p>MacBook Pro 2019</p>
+                        <p>MacBook Pro 2019</p></div>
                     </article>
                     <article>
                         <img src="/img/img-samsung-galaxy-s10.jpg" alt="Cargando...">
+                        <div class="caja"><i class="fa-sharp fa-solid fa-truck-arrow-right fa-flip"></i>
                         <p class="precio">$70.500</p>
                         <p>10% off</p>
-                        <p>Samsung Galaxy S10</p>
+                        <p>Samsung Galaxy S10</p></div>
                     </article>
                     <article>
                         <img src="/img/img-tv-samsung-smart.jpg" alt="Cargando...">
+                        <div class="caja"><i class="fa-sharp fa-solid fa-truck-arrow-right fa-flip"></i>
                         <p class="precio">$23.200</p>
                         <p>5% off</p>
-                        <p>SmartTv Samsung 43"</p>
+                        <p>SmartTv Samsung 43"</p></div>
                     </article>
                 </div>
             </section>
