--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,9 +4,11 @@
     box-sizing: border-box;
 }
 body{
+    width: 100%;
     background-color: #EAC926;
     font-family: 'Roboto', sans-serif;
 }
+/*Header**/
 header{
     font-size: 12px;
     background-size: cover;
@@ -25,38 +27,44 @@ header a{
     margin: 20px;
 }
 .burger-menu{
-    width: 150px;
-    margin: 12px;
     background-color:  #03264C;
-    display: flex;
     color:  #ebebeb;
-    justify-content: center;
 }
+/*Main**/
 main{
+    height: 100%;
     width: 100%;
     background-color: rgb(190, 188, 188);
     text-align: center;
     margin: auto;
 }
 main section{
-    width: 90%;
-    font-size: 12px; 
+    width: 100%;
+    font-size: 12px;
+    padding: auto; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 main article{
+    width: 100%;
     margin: 10px;
     border: 1px solid rgb(63, 63, 63);
-    border-radius: 8px;
+    border-radius: 20px;
+    background-color: white;
+    background-position: left;
 }
-article img{
+main article img{
     width: 100%;
+    border-radius: 20px;
 }
 article i{
     color: #39b54a;
     font-size: 2em; 
     margin: 10px 0px;
 }
-.caja{
-    width: 100%;
+main.caja{
+    
     background-color: white;
     border-top: 1px solid #ebebeb;
     border-left: 15px;
@@ -68,6 +76,14 @@ article i{
 .precio{
     font-size: 18px;
 }
+.descuento{
+    font-size: 16px;
+    color: #39b54a;
+}
+.descripcion{
+    font-size: 16px;
+}
+/*Footer**/
 footer{
     align-items: center;
     justify-content: center;
@@ -83,14 +99,36 @@ footer i{
 #fin{
     text-align: left
 }
+/*Mobile**/
 @media (min-width: 0px){
     body{
         max-width: 360px;
     }
+    img#buscador{
+        display: flex;
+        justify-content: center;
+    }
+    header img{
+        width: 50%;
+    }
+    #buscador{
+        display: inline-block;
+    }
     header nav{
        display: none;
     }  
+    .burger-menu{
+        width: 40px;
+        height: 40px;
+        text-align: center;
+        border-radius: 10px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-position: center;
+    }
 }
+/*Tablet**/
 @media (min-width: 361px){
     body{
         max-width: 768px;
@@ -101,17 +139,40 @@ footer i{
     .burger-menu{
         display: none;
     }  
-    article{
+    main section article{
         box-shadow: 0px 0px 10px rgb(100, 100, 100);
+        width: 35%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        align-items: center;
+        flex-direction: column;
+        align-self: flex-start;
     }
         
 }
+/*Desktop**/
 @media (min-width: 769px){
+    body{
+        max-width: 1380px;
+    }
     .burger-menu{
         display: none;
     }  
-    article{
+    main article{
         box-shadow: 0px 0px 10px rgb(100, 100, 100);
+        width: 35%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        align-items: center;
+        flex-direction: column;
+        align-self: flex-start;
+        
     }
     
 }
