--- a/views/home.html
+++ b/views/home.html
@@ -68,29 +68,29 @@
                         <img src="/img/img-cafetera-moulinex.jpg" alt="Cargando...">
                         <div class="caja"><i class="fa-sharp fa-solid fa-truck-arrow-right fa-flip"></i>
                         <p class="precio">$6.770</p>
-                        <p>40% OFF</p>
-                        <p>Cafetera Moulinex</p></div>
+                        <p class="descuento">40% OFF</p>
+                        <p class="descripcion">Cafetera Moulinex</p></div>
                     </article>
                     <article>
                         <img src="/img/img-macbook-pro-2019.jpg" alt="Cargando...">
                         <div class="caja"><i class="fa-sharp fa-solid fa-truck-arrow-right fa-flip"></i>
                         <p class="precio">$230.000</p>
-                        <p>20% off</p>
-                        <p>MacBook Pro 2019</p></div>
+                        <p class="descuento">20% off</p>
+                        <p class="descripcion">MacBook Pro 2019</p></div>
                     </article>
                     <article>
                         <img src="/img/img-samsung-galaxy-s10.jpg" alt="Cargando...">
                         <div class="caja"><i class="fa-sharp fa-solid fa-truck-arrow-right fa-flip"></i>
                         <p class="precio">$70.500</p>
-                        <p>10% off</p>
-                        <p>Samsung Galaxy S10</p></div>
+                        <p class="descuento">10% off</p>
+                        <p class="descripcion">Samsung Galaxy S10</p></div>
                     </article>
                     <article>
                         <img src="/img/img-tv-samsung-smart.jpg" alt="Cargando...">
                         <div class="caja"><i class="fa-sharp fa-solid fa-truck-arrow-right fa-flip"></i>
                         <p class="precio">$23.200</p>
-                        <p>5% off</p>
-                        <p>SmartTv Samsung 43"</p></div>
+                        <p class="descuento">5% off</p>
+                        <p class="descripcion">SmartTv Samsung 43"</p></div>
                     </article>
                 </div>
             </section>
@@ -101,29 +101,29 @@
                         <img src="/img/img-cafetera-moulinex.jpg" alt="Cargando...">
                         <div class="caja"><i class="fa-sharp fa-solid fa-truck-arrow-right fa-flip"></i>
                         <p class="precio">$6.770</p>
-                        <p>40% OFF</p>
-                        <p>Cafetera Moulinex</p></div>
+                        <p class="descuento">40% OFF</p>
+                        <p class="descripcion">Cafetera Moulinex</p></div>
                     </article>
                     <article>
                         <img src="/img/img-macbook-pro-2019.jpg" alt="Cargando...">
                         <div class="caja"><i class="fa-sharp fa-solid fa-truck-arrow-right fa-flip"></i>
                         <p class="precio">$230.000</p>
-                        <p>20% off</p>
-                        <p>MacBook Pro 2019</p></div>
+                        <p class="descuento">20% off</p>
+                        <p class="descripcion">MacBook Pro 2019</p></div>
                     </article>
                     <article>
                         <img src="/img/img-samsung-galaxy-s10.jpg" alt="Cargando...">
                         <div class="caja"><i class="fa-sharp fa-solid fa-truck-arrow-right fa-flip"></i>
                         <p class="precio">$70.500</p>
-                        <p>10% off</p>
-                        <p>Samsung Galaxy S10</p></div>
+                        <p class="descuento">10% off</p>
+                        <p class="descripcion">Samsung Galaxy S10</p></div>
                     </article>
                     <article>
                         <img src="/img/img-tv-samsung-smart.jpg" alt="Cargando...">
                         <div class="caja"><i class="fa-sharp fa-solid fa-truck-arrow-right fa-flip"></i>
                         <p class="precio">$23.200</p>
-                        <p>5% off</p>
-                        <p>SmartTv Samsung 43"</p></div>
+                        <p class="descuento">5% off</p>
+                        <p class="descripcion">SmartTv Samsung 43"</p></div>
                     </article>
                 </div>
             </section>
